--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,21 @@ button:hover {
   display: none !important;
 }
 
+#loadingScreen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2rem;
+  z-index: 9999;
+}
+
+
 /* Spinner */
 .spinner {
   border: 3px solid #f3f3f3;
