--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,23 @@
 /* General Styles */
 body {
   font-family: Arial, sans-serif;
-  padding: 20px;
+  padding: 0;
   margin: 0;
   background-color: #f4f4f9;
 }
 
 .container {
   max-width: 400px;
-  margin: auto;
+  margin: 40px auto;
   background-color: white;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+html, body {
+  background-color: #f4f4f9;
+  height: 100%;
 }
 
 h2 {
@@ -63,7 +68,7 @@ button:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.2); /* Lighter white background */
+  background: rgba(255, 255, 255, 0.7); /* Lighter white background */
   display: flex;
   align-items: center;
   justify-content: center;
