--- a/styles.css
+++ b/styles.css
@@ -199,9 +199,15 @@ button:hover {
   cursor: pointer;
 }
 
-.header {
-  display: flex;
-  align-items: center;
+.home-icon {
+  font-size: 24px;
+  color: #333;
+  text-decoration: none;
+  margin: 10px;
+}
+.home-icon:hover {
+  color: red;
+  cursor: pointer;
 }
 
 .logo {
